[tool.poetry]
name = "servo-compat"
version = "0.1.0"
description = "Compatibility extensions for ServoX: k8s environment switch and 'deploy-to' filter."
authors = ["Leonid Kalev <lion@opsani.com>"]
license = "Apache-2.0"
readme = "README.md"
#homepage = "https://github.com/opsani/servo-compat"
#repository = "https://github.com/opsani/servo-compat"

# NOTE: keep servox version in synch with Dockerfile
[tool.poetry.dependencies]
python = "^3.8"
servox = "^0.10.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[tool.poetry.plugins."servo.connectors"]
"env-connector" = "env_connector:K8sEnvConnector"
"adjust_filter" = "adj_adapter:AdjustFilterConnector"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.Format]
max-line-length = 120
